fix: adjust overflowing components

--- a/src/index.css
+++ b/src/index.css
@@ -153,6 +153,7 @@ html {
 .skills-marquee {
   --skills-duration: 16s;
   display: flex;
+   max-width: 100%;
   width: fit-content;
   min-width: 100%;
   gap: 0.75rem;
